# ethic-luxury

./: .asdf-plugins  .gitignore  .gitmodules  .tool-versions  CONTRIBUTING.md  Cargo.toml  LICENSE  ReadMe.md  admin.html  contrat-exemple.json  contrat.json  errors.md  index.html  rapport.md
admin/: wakf.html
benches/validator_bench/: main.rs
docs/: strucure.md
docs/dons/: article.aux  article.fdb_latexmk  article.fls  article.out  article.tex  article.toc  articleEN.aux  articleEN.fdb_latexmk  articleEN.fls  articleEN.out  articleEN.tex  articleEN.toc  formule.aux  formule.fdb_latexmk  formule.fls  formule.tex
modules/fabric-sdk/: Cargo.toml  deny.toml
modules/fabric-sdk/src/: lib.rs
modules/openapi/: openapi.yml
policies/: deny.toml  ethical-boycott.toml
publics/: Donatrice.html  index.html
src/: error.rs  islamic_shariah_validator.rs  lib.rs  types.rs  validator.rs
src/fabric/: mod.rs
src/indy/: mod.rs
src/nym/: mod.rs
src/wasm_bindings/: mod.rs
