[package]
name = "islamic_shariah_validator"
version = "0.1.1"
edition = "2021"
rust-version = "1.85.0"
authors = ["AbdElHakim ZOUAÏ <abdelhakimzouai@gmail.com>"]
description = "Validateur Shariah & DWPL pour Hyperledger Fabric, Nym et WASM"
license-file = "LICENSE"
repository = "https://gitlab.com/ethikluxry/islamic_shariah_validator"
readme = "ReadMe.md"
keywords = ["shariah", "islamic-finance", "hyperledger", "blockchain", "validator", "nym", "privacy"]
categories = ["cryptography", "finance", "web-programming"]
exclude = [".gitignore", ".gitlab/", "tests/fixtures/", "*.log"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "validator-cli"
path = "src/bin/cli.rs"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

# ============================================================================
# Features
# ============================================================================
[features]
default = []   # Aucune feature activée par défaut
wasm   = ["dep:wasm-bindgen", "dep:getrandom", "dep:serde-wasm-bindgen"]
fabric = ["dep:fabric-sdk", "dep:protobuf"]
nym    = ["dep:nym-sdk"]
# Indy est désactivé pour le moment (problème de dépendance rmp-serde yanked)
# indy   = ["dep:indy-sdk", "dep:indy-credx", "dep:indy-vdr", "dep:uuid"]
full   = ["fabric", "wasm", "nym"]   # Pas d'Indy

# ============================================================================
# Dépendances communes (toujours compilées)
# ============================================================================
[dependencies]
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
thiserror     = "1.0"
anyhow        = "1.0"
log           = "0.4"
env_logger    = "0.10"
async-trait   = "0.1"
clap          = { version = "4.6", features = ["derive"] }
chrono        = "0.4"
ed25519-dalek = "2.2"
rand          = "0.8"
sha2          = "0.10"
did-method-key = "0.1"
num-bigint    = "0.4"
num-rational  = "0.4"

# Dépendances WASM (optionnelles, activées par la feature wasm)
wasm-bindgen  = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.5", optional = true }
getrandom     = { version = "0.4", optional = true, features = ["wasm_js"] }

# ============================================================================
# Dépendances pour les cibles NATIVES uniquement (non‑WASM)
# ============================================================================
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Tokio complet
tokio = { version = "1.52", features = ["full"] }

# Fabric (optionnel)
fabric-sdk    = { version = "0.5.8", optional = true }
protobuf      = { version = "2.28", optional = true }

# Nym (optionnel)
nym-sdk       = { version = "1.21.2", optional = true }

# ============================================================================
# Dépendances pour la cible WASM32
# ============================================================================
[target.'cfg(target_arch = "wasm32")'.dependencies]
# Tokio allégé (pas de multi-thread, pas de réseau)
tokio = { version = "1.52", default-features = false, features = ["rt", "time", "macros", "sync", "io-util"] }

# ============================================================================
# Dépendances de développement
# ============================================================================
[dev-dependencies]
tempfile    = "3.27"
mockall     = "0.11"
tokio-test  = "0.4"
criterion   = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "validator_bench"
path = "benches/validator_bench/main.rs"
harness = false

# ============================================================================
# Profils de compilation
# ============================================================================
[profile.dev]
opt-level = 0
debug = true
lto = false
debug-assertions = true
codegen-units = 256
panic = "unwind"
incremental = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
strip = true
overflow-checks = false
panic = "abort"
incremental = false

[profile.test]
inherits = "dev"
opt-level = 1
debug = true
codegen-units = 8

[profile.bench]
opt-level = 3
debug = false
lto = true
codegen-units = 1
