# ============================================================================
# Hyperledger Fabric SDK for Rust – Cargo.toml
# ============================================================================
# Dépôt officiel : https://github.com/LF-Decentralized-Trust-labs/fabric-sdk-rust
# Version : 0.5.8
# Licence : Apache-2.0
# ============================================================================

[package]
name = "fabric-sdk"
version = "0.5.8"
edition = "2024"
authors = ["Arne Fuchs"]
build = "build.rs"
license = "Apache-2.0"
description = "Interact and program chaincode for the Hyperledger Fabric blockchain network"
repository = "https://github.com/LF-Decentralized-Trust-labs/fabric-sdk-rust"
keywords = ["fabric", "blockchain", "hyperledger", "smart-contract", "web3"]
readme = "README.md"
exclude = ["tests/resources/*"]

# ---------------------------------------------------------------------------
# Bibliothèque
# ---------------------------------------------------------------------------
[lib]
doctest = false

# ---------------------------------------------------------------------------
# Dépendances principales
# ---------------------------------------------------------------------------
[dependencies]
# Asynchrone (optionnel selon les features)
tokio = { version = "1.47.1", features = ["rt", "time", "io-util", "sync", "macros"], default-features = false, optional = true }
futures-util = { version = "0.3.31", optional = true }
futures-channel = { version = "0.3.31", optional = true }

# Dérivées pour le chaincode
fabric-sdk-derives = { version = "0.1.1", path = "fabric-sdk-derives", optional = true }

# Utilitaires
hex = { version = "0.4.3", optional = true }
base64 = { version = "0.22", optional = true }
percent-encoding = { version = "2.3", optional = true }
web-time = { version = "1.1.0", optional = true }

# Crypto
ecdsa = { version = "0.17.0-rc.16", features = ["der", "pkcs8", "algorithm", "pem", "sha2"], optional = true }
p256 = { version = "0.14.0-rc.7", optional = true }
sha2 = { version = "0.10.9", optional = true }
getrandom = { version = "0.4.2", features = ["wasm_js"], optional = true }

# gRPC / Protobuf
tonic = { version = "0.14.5", default-features = false, features = ["codegen"] }
tonic-prost = "0.14.2"
prost = "0.14.1"
prost-types = "0.14.1"
tonic-web-wasm-client = { version = "0.8.0", optional = true } # 0.9.0 utilise wasm-streams 0.5 incompatible avec certaines applications WASM

# Sérialisation
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }

# HTTP client (optionnel)
reqwest = { version = "0.12", default-features = false, features = ["json"], optional = true }

# ---------------------------------------------------------------------------
# Dépendances de développement
# ---------------------------------------------------------------------------
[dev-dependencies]
dotenv = "0.15.0"
tokio = { version = "1.28.0", features = ["full"] }

# ---------------------------------------------------------------------------
# Dépendances de build
# ---------------------------------------------------------------------------
[build-dependencies]
tonic-prost-build = { version = "0.14.2", default-features = false }

# ---------------------------------------------------------------------------
# Features
# ---------------------------------------------------------------------------
[features]
# Feature par défaut : client (pour interagir avec le réseau Fabric)
default = ["client"]

# Client standard (pour les applications Rust natives)
client = [
    "dep:tokio",
    "tonic/tls-aws-lc",
    "tonic/transport",
    "tonic/router",
    "dep:futures-channel",
    "dep:p256",
    "dep:ecdsa",
    "dep:sha2",
    "dep:hex",
    "dep:reqwest",
    "reqwest/rustls-tls",
    "dep:base64",
    "dep:percent-encoding",
]

# Client WASM (pour les applications WebAssembly)
client-wasm = [
    "dep:tokio",
    "dep:web-time",
    "dep:tonic-web-wasm-client",
    "dep:getrandom",
    "dep:futures-channel",
    "dep:p256",
    "dep:ecdsa",
    "dep:sha2",
    "dep:hex",
    "dep:reqwest",
    "dep:base64",
    "dep:percent-encoding",
]

# Chaincode (pour développer des smart contracts en Rust)
chaincode = [
    "dep:tokio",
    "dep:futures-util",
    "dep:fabric-sdk-derives",
    "tonic/tls-aws-lc",
    "tonic/transport",
    "tonic/router",
    "dep:futures-channel",
    "dep:p256",
    "dep:ecdsa",
    "dep:sha2",
    "dep:hex",
]
